--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ click = "^8.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
+black = "^22.1.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
