support incomplete preference lists

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,10 +4,8 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
-		"ms-python.python",                     // python support, testing, etc
-		"shd101wyy.markdown-preview-enhanced",  // markdown previews
-		"davidanson.vscode-markdownlint",       // markdown linting
-
+		"ms-python.python",
+		"davidanson.vscode-markdownlint"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
